:sparkles: change_password & delete_session
