# joayo-backend/api/src/user/check_session.rs
@@ -1,14 +1,10 @@
-use api_derive::ToStatusCode;
+use api_derive::{FromSessionError, ToStatusCode};
 use axum::extract::State;
 use axum::http::StatusCode;
 use axum_extra::extract::CookieJar;
-use chrono::{TimeDelta, Utc};
-use sea_orm::{ActiveModelTrait, EntityTrait, Set};
 use serde::Serialize;
-use tracing::{error, warn};
-use uuid::Uuid;
 
-use crate::entities::{prelude::*, *};
+use crate::common::session::get_user_from_session;
 use crate::server_result::{ServerResult, ToStatusCode};
 
 #[derive(Serialize, ToStatusCode)]
@@ -17,10 +13,10 @@ pub struct CheckSessionResponse {
     email: String,
 }
 
-#[derive(Serialize)]
+#[derive(Serialize, FromSessionError)]
 pub enum CheckSessionError {
     Unauthorized,
-    SessionExpired,
+    SessionInvalid,
     InternalServerError
 }
 
@@ -28,7 +24,7 @@ impl ToStatusCode for CheckSessionError {
     fn to_status_code(&self) -> StatusCode {
         match self {
             Self::Unauthorized => return StatusCode::UNAUTHORIZED,
-            Self::SessionExpired => return StatusCode::FORBIDDEN,
+            Self::SessionInvalid => return StatusCode::FORBIDDEN,
             Self::InternalServerError => return StatusCode::INTERNAL_SERVER_ERROR,
         }
     }
@@ -39,59 +35,9 @@ pub async fn check_session(
     jar: CookieJar
 ) -> ServerResult<CheckSessionResponse, CheckSessionError>{
 
-    let session_id = match jar.get("session_id") {
-        Some(session_id) => match Uuid::parse_str(&session_id.value()) {
-            Ok(session_id) => session_id,
-            Err(_) => {
-                warn!("Invalid session_id requested: {}", session_id.value());
-                return ServerResult::Error(CheckSessionError::Unauthorized)
-            }
-        }
-        None => return ServerResult::Error(CheckSessionError::Unauthorized)
-    };
-
-    let session = Session::find_by_id(session_id)
-        .one(&state.db)
-        .await;
-
-    let session = match session {
-        Ok(Some(session)) => session,
-        Ok(None) => {
-            warn!("Session not found in database: {}", session_id);
-            return ServerResult::Error(CheckSessionError::Unauthorized)
-        },
-        Err(err) => {
-            error!("{}", err);
-            return ServerResult::Error(CheckSessionError::InternalServerError)
-        }
-    };
-
-    if session.expires_at < Utc::now().naive_utc() {
-        return ServerResult::Error(CheckSessionError::SessionExpired)
-    }
-
-    let mut session_update: session::ActiveModel = session.clone().into();
-    session_update.expires_at = Set(Utc::now().naive_utc() + TimeDelta::minutes(30));
-
-    if let Err(err) = session_update.update(&state.db).await {
-        error!("{}", err);
-        return ServerResult::Error(CheckSessionError::InternalServerError)
-    }
-
-    let user = User::find_by_id(session.user_id)
-        .one(&state.db)
-        .await;
-
-    let user = match user {
-        Ok(Some(user)) => user,
-        Ok(None) => {
-            error!("Session is valid but user not found: {}, {}", session.user_id, session.session_id);
-            return ServerResult::Error(CheckSessionError::InternalServerError)
-        }
-        Err(err) => {
-            error!("{}", err);
-            return ServerResult::Error(CheckSessionError::InternalServerError)
-        }
+    let user = match get_user_from_session::<CheckSessionError>(&jar, &state.db).await {
+        Ok(user) => user,
+        Err(err) => return ServerResult::Error(err)
     };
 
     ServerResult::Ok(CheckSessionResponse {
